Fix alignment for Categories and Social media in responsive mode

--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -109,7 +109,7 @@
 
         div {
             width: 100%;
-            margin: 0;
+            margin: 0 !important;
         }
     }
 
